--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     implementation("com.squareup.moshi:moshi:1.9.2")
 
     implementation "org.jetbrains.anko:anko-commons:0.10.4"
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-rc01"
 }
