--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="io.radev.catchit">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -13,6 +14,8 @@
         android:supportsRtl="true"
         android:name=".CatchItApp"
         android:theme="@style/AppTheme">
+        <service android:name=".LiveTimetableService"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
