replace workmanager with alarmmanager
- workmanager impose a limitation of min 15 mins interval

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         <service
             android:name=".LiveTimetableService"
             android:exported="false" />
+        <receiver
+            android:name=".UpdateLiveTimetableReceiver"
+            android:enabled="true" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
