--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service
-            android:name=".LiveTimetableService"
+            android:name=".experimental.LiveTimetableService"
             android:exported="false" />
         <receiver
-            android:name=".UpdateLiveTimetableReceiver"
+            android:name=".updateTimetableAlarm.UpdateLiveTimetableReceiver"
             android:enabled="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleInstance"
             android:screenOrientation="portrait"
