--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ android {
 
 dependencies {
     def work_version = "2.3.4"
-
+    testImplementation 'org.mockito:mockito-core:2.8.9'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -74,6 +74,9 @@ dependencies {
     // optional - Test helpers
     androidTestImplementation "androidx.work:work-testing:$work_version"
 
+    //java8 time libs
+    implementation "com.jakewharton.threetenabp:threetenabp:1.2.4"
+    testImplementation 'org.threeten:threetenbp:1.4.4'
 
 
 }
