--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,6 @@ ext {
     nav_version = "2.3.0-beta01"
     work_version = "2.3.4"
     hilt_version = "2.28-alpha"
+    hilt_view_model="1.0.0-alpha01"
     room_version = "2.2.5"
 }
