--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,14 @@ android {
 
 dependencies {
 
-    testImplementation 'org.mockito:mockito-core:2.8.9'
+    testImplementation 'org.mockito:mockito-core:3.0.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // optional - Test helpers
+    androidTestImplementation "androidx.work:work-testing:$work_version"
+    
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -52,14 +59,14 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //Retrofit+network dependencies
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.2.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
+    //Moshi
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.9.2")
     implementation("com.squareup.moshi:moshi:1.9.2")
@@ -72,9 +79,6 @@ dependencies {
     // Kotlin + coroutines
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
-    // optional - Test helpers
-    androidTestImplementation "androidx.work:work-testing:$work_version"
-
     //java8 time libs
     implementation "com.jakewharton.threetenabp:threetenabp:1.2.4"
     testImplementation 'org.threeten:threetenbp:1.4.4'
@@ -84,8 +88,6 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:$hilt_view_model"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-
-
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
