--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,13 +71,12 @@ dependencies {
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.9.2")
     implementation("com.squareup.moshi:moshi:1.9.2")
 
-    implementation "org.jetbrains.anko:anko-commons:0.10.4"
-
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-rc01"
     implementation "androidx.fragment:fragment-ktx:1.2.4"
 
     // Kotlin + coroutines
     implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     //java8 time libs
     implementation "com.jakewharton.threetenabp:threetenabp:1.2.4"
