--- a/build.gradle
+++ b/build.gradle
@@ -39,4 +39,5 @@ ext {
     hilt_version = "2.28-alpha"
     hilt_view_model="1.0.0-alpha01"
     room_version = "2.2.5"
+    lifecycle_version="2.2.0"
 }
