--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     testImplementation 'org.mockito:mockito-core:3.0.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7'
     testImplementation 'junit:junit:4.12'
