--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,5 +101,8 @@ dependencies {
     //Location
     implementation "com.google.android.gms:play-services-location:17.0.0"
 
+    //activityx & fragmentx
     implementation "androidx.activity:activity-ktx:1.2.0-alpha06"
+    implementation "androidx.fragment:fragment-ktx:1.3.0-alpha06"
+
 }
