--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,16 @@
             android:name=".alarm.UpdateLiveTimetableReceiver"
             android:enabled="true" />
 
+        <receiver android:name=".widget.FavouriteDepartureAppWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/favourite_departure_appwidget_info" />
+        </receiver>
+
+
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
