--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@
             android:name=".experimental.LiveTimetableService"
             android:exported="false" />
 
+        <service
+            android:name=".widget.FavouriteDeparturesWidgetService"
+            android:exported="false"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
         <receiver
             android:name=".alarm.UpdateLiveTimetableReceiver"
             android:enabled="true" />
